--- a/octohat.cabal
+++ b/octohat.cabal
@@ -44,6 +44,7 @@ Library
   default-language: Haskell2010
 
 test-suite spec
+  ghc-options     :   -Wall
   type            :   exitcode-stdio-1.0
   hs-source-dirs  :   spec
   main-is         :   Spec.hs
