--- a/octohat.cabal
+++ b/octohat.cabal
@@ -19,6 +19,7 @@ Library
     , base16-bytestring    == 0.1.1.*
     , base64-bytestring    == 1.0.*
     , bytestring           >= 0.9
+    , containers           >= 0.4
     , cryptohash           == 0.11.*
     , dotenv               == 0.1.*
     , either               == 4.3.*
