--- a/octohat.cabal
+++ b/octohat.cabal
@@ -1,9 +1,9 @@
 Name:                octohat
 Version:             0.1
 Synopsis:            A tested, minimal wrapper around GitHub's API. Very incomplete at the moment
-License:             AllRightsReserved
-Author:              StackBuilders
-Maintainer:          jsantos@stackbuilders.com
+License:             MIT
+Author:              Stack Builders
+Maintainer:          hackage@stackbuilders.com
 Stability:           Experimental
 Category:            Network
 Build-type:          Simple
