--- a/octohat.cabal
+++ b/octohat.cabal
@@ -7,6 +7,8 @@ Maintainer:          hackage@stackbuilders.com
 Stability:           Experimental
 Category:            Network
 Build-type:          Simple
+Homepage:            https://github.com/stackbuilders/octohat
+Bug-reports:         https://github.com/stackbuilders/octohat/issues
 Cabal-version:       >=1.10
 
 Library
