--- a/octohat.cabal
+++ b/octohat.cabal
@@ -47,6 +47,22 @@ Library
 
   default-language: Haskell2010
 
+Executable abc
+  hs-source-dirs: src-demo
+  main-is: Web/GitHub/CLI/Main.hs
+
+  Build-depends:
+    aeson                     ==0.8.0.*,
+    base                      >=4.7 && <4.8,
+    text                      ==1.2.0.*,
+    optparse-applicative      ==0.11.0.*,
+    octohat                   ==0.1.2,
+    utf8-string               >=0.3 && <=1,
+    yaml                      ==0.8.10.*
+
+  default-language: Haskell2010
+  ghc-options: -threaded -Wall -Werror
+
 test-suite spec
   ghc-options     :   -Wall
   type            :   exitcode-stdio-1.0
