--- a/octohat.cabal
+++ b/octohat.cabal
@@ -1,7 +1,7 @@
 Name:                octohat
 Synopsis:            A tested, minimal wrapper around GitHub's API.
 Description:         A tested, minimal wrapper around GitHub's API.
-Version:             0.1.4
+Version:             0.1.4.1
 License:             MIT
 License-file:        LICENSE
 Author:              Stack Builders
@@ -55,13 +55,13 @@ Executable abc
   main-is: Web/GitHub/CLI/Main.hs
 
   Build-depends:
-    aeson                     ==0.8.0.*,
-    base                      >=4.4 && <4.8,
-    text                      ==1.2.0.*,
-    optparse-applicative      ==0.11.0.*,
-    octohat                   ==0.1.4,
-    utf8-string               >=0.3 && <=1,
-    yaml                      ==0.8.10.*
+      aeson                  ==0.8.0.*
+    , base                   >=4.4 && <4.8
+    , text
+    , optparse-applicative   ==0.11.0.*
+    , octohat
+    , utf8-string            >=0.3 && <=1
+    , yaml                   ==0.8.10.*
 
   default-language: Haskell2010
 
@@ -80,7 +80,7 @@ test-suite spec
                     , base-compat        == 0.6.*
                     , hspec              == 2.1.*
                     , hspec-expectations == 0.6.*
-                    , text               == 1.2.*
+                    , text
                     , dotenv             == 0.1.*
                     , transformers       == 0.3.*
                     , octohat
