--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,24 @@
-language: haskell
-
-ghc:
-  - 7.4
-  - 7.6
-  - 7.8
-
 env:
   global:
-  - secure: Cp+kl0j79zeXCj1zZN6gbU/8RZW7aXXDOlbKSNLa338Io0LwmSG+L2beazhhw7gkB4qFf9s9seJzjgx0jJaV1jkizcRunQC/iw7q6Y4wBr6jeQJqGKGyzaKyTY3dTwN20V/NnofRxKKL2v0QX1kUx5CB34wlprq/wO9nJeIDR1U=
+    - secure: Cp+kl0j79zeXCj1zZN6gbU/8RZW7aXXDOlbKSNLa338Io0LwmSG+L2beazhhw7gkB4qFf9s9seJzjgx0jJaV1jkizcRunQC/iw7q6Y4wBr6jeQJqGKGyzaKyTY3dTwN20V/NnofRxKKL2v0QX1kUx5CB34wlprq/wO9nJeIDR1U=
+  matrix:
+    - GHC_VERSION=7.4.2  CABAL_VERSION=1.18
+    - GHC_VERSION=7.6.3  CABAL_VERSION=1.20
+    - GHC_VERSION=7.8.4  CABAL_VERSION=1.20
+    - GHC_VERSION=7.10.1 CABAL_VERSION=1.22
+
+before_install:
+  - sudo apt-add-repository -y ppa:hvr/ghc
+  - sudo apt-get update
+  - sudo apt-get install -y ghc-$GHC_VERSION cabal-install-$CABAL_VERSION
+  - export PATH=/opt/ghc/$GHC_VERSION/bin:/opt/cabal/$CABAL_VERSION/bin:$PATH
+
+install:
+  - cabal update
+  - cabal sandbox init
+  - cabal install --only-dependencies --enable-tests
+
+script:
+  - cabal configure --enable-tests
+  - cabal build
+  - cabal test
