--- a/octohat.cabal
+++ b/octohat.cabal
@@ -1,7 +1,7 @@
 Name:                octohat
 Synopsis:            A tested, minimal wrapper around GitHub's API.
 Description:         A tested, minimal wrapper around GitHub's API.
-Version:             0.1.4.1
+Version:             0.1.4.2
 License:             MIT
 License-file:        LICENSE
 Author:              Stack Builders
@@ -18,7 +18,7 @@ Library
 
   Build-depends:
       aeson                == 0.8.*
-    , base                 >= 4.4 && < 4.8
+    , base                 >= 4.4 && < 4.9
     , base-compat          == 0.6.*
     , base16-bytestring    == 0.1.1.*
     , base64-bytestring    == 1.0.*
@@ -31,13 +31,13 @@ Library
     , ghc-prim             >= 0.2
     , http-client          == 0.4.*
     , http-types           == 0.8.*
-    , lens                 >= 4.0 && <= 4.7.0.1
+    , lens                 >= 4.0 && < 4.10
     , mtl                  == 2.*
     , text                 == 1.2.*
-    , time                 == 1.4.*
-    , transformers         == 0.3.*
+    , time                 >= 1.4 && < 1.6
+    , transformers         >= 0.3 && < 0.5
     , unordered-containers == 0.2.*
-    , wreq                 == 0.3.*
+    , wreq-sb              == 0.4.*
     , xmlhtml              == 0.2.*
 
   ghc-options:       -Wall
@@ -56,12 +56,12 @@ Executable abc
 
   Build-depends:
       aeson                  ==0.8.0.*
-    , base                   >=4.4 && <4.8
+    , base                   >=4.4 && <4.9
     , text
     , optparse-applicative   ==0.11.0.*
     , octohat
     , utf8-string            >=0.3 && <=1
-    , yaml                   ==0.8.10.*
+    , yaml                   >= 0.8 && < 0.9
 
   default-language: Haskell2010
 
@@ -76,13 +76,13 @@ test-suite spec
   type            :   exitcode-stdio-1.0
   hs-source-dirs  :   spec
   main-is         :   Spec.hs
-  build-depends   :   base               >= 4.4 && <4.8
+  build-depends   :   base               >= 4.4 && <4.9
                     , base-compat        == 0.6.*
                     , hspec              == 2.1.*
                     , hspec-expectations == 0.6.*
                     , text
                     , dotenv             == 0.1.*
-                    , transformers       == 0.3.*
+                    , transformers       >= 0.3 && < 0.5
                     , octohat
   other-modules:    Network.Octohat.TestData,
                     Network.Octohat.TestUtil
