--- a/octohat.cabal
+++ b/octohat.cabal
@@ -27,7 +27,7 @@ Library
     , cryptohash           == 0.11.*
     , dotenv               == 0.1.*
     , either               == 4.3.*
-    , errors               == 1.4.*
+    , errors               >= 1.4 && < 2.1
     , ghc-prim             >= 0.2
     , http-client          == 0.4.*
     , http-types           == 0.8.*
