--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,31 @@
+language: haskell
+
+sudo: false
+
 env:
   global:
     - secure: Cp+kl0j79zeXCj1zZN6gbU/8RZW7aXXDOlbKSNLa338Io0LwmSG+L2beazhhw7gkB4qFf9s9seJzjgx0jJaV1jkizcRunQC/iw7q6Y4wBr6jeQJqGKGyzaKyTY3dTwN20V/NnofRxKKL2v0QX1kUx5CB34wlprq/wO9nJeIDR1U=
-  matrix:
-    - GHC_VERSION=7.4.2  CABAL_VERSION=1.18
-    - GHC_VERSION=7.6.3  CABAL_VERSION=1.20
-    - GHC_VERSION=7.8.4  CABAL_VERSION=1.20
-    - GHC_VERSION=7.10.1 CABAL_VERSION=1.22
+
+matrix:
+  include:
+    - env: CABALVER=1.18 GHCVER=7.4.2
+      addons: {apt: {packages: [cabal-install-1.18,ghc-7.4.2], sources: [hvr-ghc]}}
+    - env: CABALVER=1.20 GHCVER=7.6.3
+      addons: {apt: {packages: [cabal-install-1.20,ghc-7.6.3], sources: [hvr-ghc]}}
+    - env: CABALVER=1.20 GHCVER=7.8.4
+      addons: {apt: {packages: [cabal-install-1.20,ghc-7.8.4], sources: [hvr-ghc]}}
+    - env: CABALVER=1.22 GHCVER=7.10.2
+      addons: {apt: {packages: [cabal-install-1.22,ghc-7.10.2], sources: [hvr-ghc]}}
 
 before_install:
-  - sudo apt-add-repository -y ppa:hvr/ghc
-  - sudo apt-get update
-  - sudo apt-get install -y ghc-$GHC_VERSION cabal-install-$CABAL_VERSION
-  - export PATH=/opt/ghc/$GHC_VERSION/bin:/opt/cabal/$CABAL_VERSION/bin:$PATH
+  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
   - cabal update
   - cabal sandbox init
-  - cabal install --only-dependencies --enable-tests
+  - cabal install --only-dependencies --enable-tests -j2
 
 script:
   - cabal configure --enable-tests
-  - cabal build
+  - cabal build -j2
   - cabal test
